@@ -3,6 +3,8 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 ==10/14/2008
 Trevius: Charm Spells set to max level of 0 now have unlimited max level as they should
 Derision: Player pets should no longer be fearable if npcspecialattks contains 'D'.
+cavedude00: (Rocker8956) Changes to quest::getlevel and quest::setinstflag/setinstflagmanually to reduce DB access
+cavedude00: (Rocker8956) Added quest::getinstflag
 
 ==10/13/2008
 Derision: Looting your corpse while liched/wolf form etc should now auto-equip items
